--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:grid;
+}
+.item{
+	grid-template-rows:repeat(2,200px);
+	grid-template-colums:repeat(2,200px);
+}
