--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,11 @@
 /* Your CSS Code here. */
 .holder{
 	display:grid;
-}
-.item{
 	grid-template-rows:repeat(2,200px);
-	grid-template-colums:repeat(2,200px);
+	grid-template-columns:repeat(2,200px);
 }
+}
+/* .item{
+	grid-template-rows:repeat(2,200px);
+	grid-template-colums:repeat(2,200px); */
+/* } */
